Closed Bug 594976 Opened 15 years ago Closed 15 years ago

[gfxInfo] Adapter description, device ID and vendor ID are null or empty for some graphic cards under Windows 2000/XP

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- beta7+

People

(Reporter: bemguard-bugzilla, Assigned: jrmuizel)

References

()

Details

Attachments

(4 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows NT 5.1; rv:2.0b6pre) Gecko/20100909 Firefox/4.0b6pre Build Identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b6pre) Gecko/20100909 Firefox/4.0b6pre My usual Thinkpad T61 under Windows XP SP3. about:config doesn't have any information about my graphics adapter, but Grafx Bot can tell me something about it. Why the difference? Reproducible: Always Steps to Reproduce: 1.Load Trunk with Grafx Bot 0.1.23 2.Start Grafx Bot and go to System Info 3.Open another window with about:support 4.Compare reported information Actual Results: about:support doesn't have the same info as Grafx Bot Expected Results: Information should be the same. Built from http://hg.mozilla.org/mozilla-central/rev/8e0fce7d5b49
Attached image Screenshot
Version: unspecified → Trunk
Sorry, that should obviously be "about:support" in my second paragraph there.
Status: UNCONFIRMED → NEW
Ever confirmed: true
In the time since this bug was filed, Gecko/20100910 Firefox/4.0b6pre is giving me a solid black window interior regardless of what I try to do (resize, cover, new window, etc.), so hopefully this information will still be presented properly if layers.accelerate-all is set to false.
blocking2.0: --- → ?
This won't be testable unless we can see what we're doing, so we'll need Bug 593678 fixed.
Depends on: 593678
Assignee: nobody → jmuizelaar
Summary: [gfxInfo] Unknown adapter reported for Intel GMA 965 graphic card under Windows XP → [gfxInfo] Unknown adapter reported for Intel graphic card under Windows XP
Have exactly same problem with an GMA 950 (Intel 945GME) 0x27AE This is with a nightly after the new Intel blacklist matrix patch. Grafxbot got it right: http://brasstacks.mozilla.com/resultserv/data/results/5b054ed8-17f4-408f-97db-6d25807b62b6 GPU-Z screenshot in attachment above.
Summary: [gfxInfo] Unknown adapter reported for Intel graphic card under Windows XP → [gfxInfo] Unknown adapter reported for Intel and Nvidia graphic cards under Windows 2000/XP
Because wcsncmp() performs a case-sensitive comparison, initialization routine for GfxInfo may not be executed depending on value of DeviceKey member of DISPLAY_DEVICE structure. On my system (RADEON 9600) under Windows 2000, DeviceKey of DISPLAY_DEVICE gets the following string: \REGISTRY\Machine\System\ControlSet002\Services\ati2mtag\Device0 It's necessary to use _wcsnicmp(), not wcsncmp(), in order to initialize GfxInfo correctly. _wcsnicmp() is a case-insensitive version of wcsncmp().
Attachment #478773 - Flags: superreview?
Attachment #478773 - Flags: review?
Attachment #478773 - Flags: superreview?(roc)
Attachment #478773 - Flags: superreview?
Attachment #478773 - Flags: review?
Attachment #478773 - Flags: review+
Attachment #478773 - Flags: superreview?(roc) → superreview?(vladimir)
Comment on attachment 478773 [details] [diff] [review] case-insensitive comparison for DeviceKey of DISPLAY_DEVICE This doesn't need superreview. It would also be good to add a comment about why a case insensitive compare needs to be used. Something like: /* some systems have a DeviceKey starting with \REGISTRY\Machine\ so we need to compare case insenstively */
Attachment #478773 - Flags: superreview?(vladimir)
Added a comment why we need a case-insensitive comparison.
Attachment #478773 - Attachment is obsolete: true
Attachment #478784 - Flags: review?(bas.schouten)
Attachment #478784 - Flags: review?(bas.schouten) → review+
blocking2.0: ? → beta7+
I've confirmed the latest tinderbox build can show graphics information on my system.
Push : http://hg.mozilla.org/mozilla-central/rev/0fa5626cec95 Leave it open because there is still driver version and date issue. For unknown Adapter RAM issue, it is bug 591787.
Depends on: 600145
(In reply to comment #12) > Push : > http://hg.mozilla.org/mozilla-central/rev/0fa5626cec95 > > Leave it open because there is still driver version and date issue. Let's open a different bug for those issues and resolve this one.
For the driver version and date issue, I filed bug 600280.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Summary: [gfxInfo] Unknown adapter reported for Intel and Nvidia graphic cards under Windows 2000/XP → [gfxInfo] Adapter description, device ID and vendor ID are null or empty for some graphic cards under Windows 2000/XP
(In reply to comment #14) > For the driver version and date issue, I filed bug 600280. Great, thanks.
Confirmed, WFM now (except the Adapter RAM) with Nightly builds. Mozilla/5.0 (Windows NT 5.1; rv:2.0b7pre) Gecko/20100928 Firefox/4.0b7pre
Status: RESOLVED → VERIFIED
Blocks: 593678
No longer depends on: 593678
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: