Bug 594976. GfxInfo: Case-insensitive comparison for DeviceKey of DISPLAY_DEVICE. r=bschouten,a=blocking

This should fix a bunch of devices not being properly detected by GfxInfo but detected by
GfxBot.